--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -46,11 +46,10 @@ assetic:
 doctrine:
     dbal:
         driver:   "%database_driver%"
-        host:     "%database_host%"
-        port:     "%database_port%"
         dbname:   "%database_name%"
         user:     "%database_user%"
         password: "%database_password%"
+        unix_socket: "%database_socket%"
         charset:  UTF8
         # if using pdo_sqlite as your database driver, add the path in parameters.yml
         # e.g. database_path: "%kernel.root_dir%/data/data.db3"
