--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,9 +11,9 @@ security:
             id: fos_user.user_provider.username
 
     firewalls:
-        dev:
-            pattern:  ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+#        dev:
+#            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+#            security: false
 
         main:
             pattern: ^/
