--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -48,6 +48,7 @@ doctrine:
         dbname:   "%database_name%"
         user:     "%database_user%"
         password: "%database_password%"
+        unix_socket: /Applications/MAMP/tmp/mysql/mysql.sock
         charset:  UTF8
         # if using pdo_sqlite as your database driver, add the path in parameters.yml
         # e.g. database_path: "%kernel.root_dir%/data/data.db3"
@@ -70,3 +71,6 @@ fos_user:
     db_driver: orm 
     firewall_name: main
     user_class: Pipeline\APIBundle\Entity\User
+    registration:
+        confirmation:
+            enabled: false
