Added Guzzle and GuzzleBundle and an API endpoint to FrontendBundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,3 +74,7 @@ fos_user:
     registration:
         confirmation:
             enabled: false
+            
+#Guzzle
+playbloom_guzzle:
+    web_profiler: true
