Polish of Task API and Entities.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ CVS
 /app/logs/*
 /vendor/
 /app/config/parameters.yml
+
+#Entity Backups
+src/Pipeline/APIBundle/Entity/Task.php~
+src/Pipeline/APIBundle/Entity/User.php~
