--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "playbloom/guzzle-bundle": "v1.0.1",
         "jms/serializer-bundle": "0.12.0",
         "friendsofsymfony/rest-bundle": "1.1.0",
-        "leafo/lessphp": "dev-master"
+        "leafo/lessphp": "dev-master",
+        "hearsay/require-js-bundle": "2.0.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
