--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -3,8 +3,8 @@ imports:
 
 framework:
     test: ~
-    session:
-        storage_id: session.storage.mock_file
+	session:
+          storage_id: session.storage.filesystem
     profiler:
         collect: false
 
@@ -14,3 +14,14 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+liip_functional_test:
+	cache_sqlite_db: true
+
+doctrine:
+    dbal:
+        default_connection: default
+        connections:
+            default:
+                driver:   pdo_sqlite
+                path:     %kernel.cache_dir%/pipeline-test.db
